integration/src/test/resources/templates/invalid-target/js-d8/build.gradle
kotlin {
    js {
        d8()
    }
}

benchmark {
    targets {
        register("js")
    }
}
